# rcd-nexus-portal

./: .gitignore  CONTRIBUTING.md  README.md  manage.py  pyproject.toml  rcd_nexus_settings.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
data/: ipeds_2023-02-09.csv  ipeds_2024-01-16.csv  us-states.json
data/sensitive/: README.md
nexus/: apps.py  auth.py  context_processors.py  decorators.py  middleware.py  routes.py  settings.py
nexus/admin/: __init__.py  capmodel.py  cilogon.py  institutions.py  motd.py  rcd_profiles.py
nexus/deploy/: asgi.py  wsgi.py
nexus/fixtures/: facings.json  legacy_capmodel.json
nexus/forms/: __init__.py  capmodel.py  dataviz.py  institutions.py  rcd_profiles.py
nexus/migrations/: 0001_initial.py  0002_motd_rcdprofile_open_access_alter_rcdprofile_mission_and_more.py  0003_institution_ipeds_aanapisi_annh_and_more.py  0004_merge_institutions_and_more.py  0004_motd_dismissdays_and_more.py  0005_auto_20240906_1717.py  0005_capabilitiesquestion_is_essential_and_more.py  0005_surveyreason_alter_rcdprofile_year_and_more.py  0006_alter_postcompletionsurvey_nps_and_more.py  0006_auto_20250130_0045.py  0007_auto_20250226_1819.py  0007_capabilitiesquestioncontent_shorttext_and_more.py  0008_auto_20250130_1857.py  0009_capabilitiesassessment_assessment_type_and_more.py  0010_capabilitiesanswer_is_included_and_more.py  0011_merge_20250305_2246.py  0012_auto_20260428_2209.py  0013_auto_20260630_2339.py  0014_auto_20260720_2010.py  0015_capabilitiesassessment_create_time_and_more.py
(+112 files in other folders)
