[tool.poetry]
name = "rcd-nexus-portal"
version = "0.2.6"
description = ""
authors = ["Paul Fischer <p.fischer@utah.edu>", "Patrick Schmitz <patrick@sempercogito.com>"]
readme = "README.md"
packages = [{include = "nexus"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
redis = "^4.6.0"
mozilla-django-oidc = "^3.0.0"

# production
gunicorn = { version = "^20.1.0", optional = true }
psycopg = { extras = ["c"], version = "^3.1.8", optional = true }
hiredis = { version = "^2.2.2", optional = true }

[tool.poetry.extras]
prod = ["gunicorn", "psycopg", "hiredis"]

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-django = "^4.5.2"
black = "^23.3.0"
isort = "^5.12.0"
psycopg = { extras = ["binary"], version = "^3.1.8" }
ipython = "^8.12.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rcd_nexus_settings"
python_files = "tests/**.py"
filterwarnings = "ignore::pytest.PytestCacheWarning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
